--- a/Project_X/index.html
+++ b/Project_X/index.html
@@ -158,16 +158,11 @@
    >
     <h2>DayOff</h2>
     <ul>
-     <li><a href="Formes/Day_Off/طلب اجازة مدير.pdf">سامح بلامون</a></li>
-     <li><a href="Formes/Day_Off/اميل رفعت.pdf">اميل رفعت</a></li>
-     <li><a href="Formes/Day_Off/كرم سميع.pdf">كرم سميع</a></li>
-     <li><a href="Formes/Day_Off/بيتر نور.pdf">بيتر نور</a></li>
-     <li><a href="Formes/Day_Off/كرم نعيم.pdf">كرم نعيم</a></li>
-     <li><a href="Formes/Day_Off/نصحى.pdf">نصحي مقار</a></li>
-     <li><a href="Formes/Day_Off/ابانوب_عاطف.pdf">ابانوب عاطف</a></li>
-     <li><a href="Formes/Day_Off/كيرلس عاطف ثابت.pdf">كيرلس عاطف</a></li>
-     <li><a href="Formes/Day_Off/مينا مخلف.pdf">مينا مخلف</a></li>
-     <li><a href="Formes/Day_Off/ابانوب_نصيف.pdf">ابانوب نصيف</a></li>
+    <li><a href="Formes/Day_Off/وائل.pdf">وائل</a></li>
+	 <li><a href="Formes/Day_Off/ابانوب_سعيد.pdf">ابانوب سعيد</a></li>
+     <li><a href="Formes/Day_Off/كيرلس سامي.pdf">كيرلس سامي</a></li>
+	 <li><a href="Formes/Day_Off/هدرا.pdf">هدرا</a></li>
+	 <li><a href="Formes/Day_Off/كرم سميع.pdf">كرم سميع</a></li>
      <li><a href="Formes/Day_Off/نموزج اذن للكل.pdf">نموزج الاذن</a></li>
      <li>
       <a href="Formes/Day_Off/اجازة بدل المدير_.pdf">اجازة بدل للمدير</a>
