--- a/Project_X/index.html
+++ b/Project_X/index.html
@@ -165,7 +165,7 @@
 	 <li><a href="Formes/Day_Off/كرم سميع.pdf">كرم سميع</a></li>
      <li><a href="Formes/Day_Off/نموزج اذن للكل.pdf">نموزج الاذن</a></li>
      <li>
-      <a href="Formes/Day_Off/اجازة بدل المدير_.pdf">اجازة بدل للمدير</a>
+      <a href="Formes/Day_Off/اجازة بدل المدير.pdf">اجازة بدل للمدير</a>
      </li>
      <li><a href="Formes/Day_Off/اجازة بدل للموظف.pdf">اجازة بدل للموظف</a></li>
     </ul>
