--- a/Project_X/index.html
+++ b/Project_X/index.html
@@ -167,7 +167,7 @@
      <li>
       <a href="Formes/Day_Off/اجازة بدل المدير.pdf">اجازة بدل للمدير</a>
      </li>
-     <li><a href="Formes/Day_Off/اجازة بدل للموظف.pdf">اجازة بدل للموظف</a></li>
+     <li><a href="Formes/Day_Off/اجازة بدل موظف.pdf">اجازة بدل للموظف</a></li>
     </ul>
    </section>
 
@@ -257,7 +257,7 @@
 
  <footer class="footer">
   <nav class="footer-nav">
-   <p>&copy; | Peter Nour MIS Naghammadi Credit Unit</p>
+   <p>Hedra Waheed MIS Farshout Credit Unit</p>
   </nav>
  </footer>
 </html>
